# simpleEncoder

./: .gitignore  CMakeLists.txt  README.md  main.cpp  simpleEncoder.sublime-project  simpleEncoder.sublime-workspace
common/: AudioFormatType.h  Common.h  ErrorCodes.h
core/: Decoder.cpp  Decoder.h  DecoderWAV.cpp  DecoderWAV.h  Encoder.cpp  Encoder.h  EncoderAAC.h  EncoderFLAC.cpp  EncoderFLAC.h  EncoderFactory.h  EncoderMP3.cpp  EncoderMP3.h  EncoderOpus.cpp  EncoderOpus.h  EncoderVorbis.h
scripts/: validate_encoded_files.sh
tests/: .FileSystemHelperTest.cpp.kate-swp  AudioValidationHelper.h  AudioValidationTest.cpp  EncoderFunctionalTest.cpp  FileSystemHelperTest.cpp  HelperTest.cpp  WaveFileWrapperTest.cpp
tests/mocks/: IHelper.h  MockFileSystemHelper.h  MockHelper.h  MockWaveFileWrapper.h
utils/: FileSystemHelper.cpp  FileSystemHelper.h  Helper.cpp  Helper.h  IFileSystemHelper.h  Mp3FileWrapper.cpp  Mp3FileWrapper.h  Mp3Header.h  WAVEHelper.cpp  WAVEHelper.h  WaveFileWrapper.cpp  WaveFileWrapper.h  WaveHeader.h
